--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-  <body class="prose mx-auto">
+  <body class="prose mx-auto mb-16">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <div>
