--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -10,6 +10,8 @@
     <p><%= blog_post.content %></p>
   </div>
 <% end %>
-<div class="my-16">
-  <%== pagy_nav(@pagy) %>
-</div>
+<% if @pagy.count > @pagy.items %>
+  <div class="my-16">
+    <%== pagy_nav(@pagy) %>
+  </div>
+<% end %>
